@@ -71,21 +71,20 @@
         <translation>Nachricht vom Lehrer</translation>
     </message>
     <message>
-        <source>Confirm access
-</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>Somebody at host %1 tries to access your screen. Do you want to grant him/her access?</source>
-        <translation type="unfinished"></translation>
+        <translation>Jemand am Rechner %1 versucht auf Ihren Bildschirm zuzugreifen. Möchten Sie ihm/ihr Zugriff gewähren?</translation>
     </message>
     <message>
         <source>Never for this session</source>
-        <translation type="unfinished"></translation>
+        <translation>Nie für diese Sitzung</translation>
     </message>
     <message>
         <source>Always for this session</source>
-        <translation type="unfinished"></translation>
+        <translation>Immer für diese Sitzung</translation>
+    </message>
+    <message>
+        <source>Confirm access</source>
+        <translation>Zugriff bestätigen</translation>
     </message>
 </context>
 <context>
