@@ -1,5 +1,9 @@
 2006-10-28	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/resources/de.ts:
+	* ica/resources/de.qm:
+	updated German translation
+
 	* common/src/local_system.cpp:
 	shutdown and reboot under win32 via InitiateSystemShutdown() instead
 	of ExitWindowsEx() - makes shutdown and rebooting under win32 possible
